# order-book-chat-bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: llm.py  models.py  pdf_extract.py  server.py  store.py
app/pdf_backends/: camelot_backend.py  vision_backend.py
data/: sample_orders.json
scripts/: ingest.py  ingest_pdf.py  make_borderless_pdf.py  make_sample_pdfs.py  take_screenshots.py
static/: index.html
tests/: test_pdf_backends.py  test_pipeline.py
